[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pipxx"
description = "Wrapper for pipx to add some minor functionality"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pip", "pipx"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/pipxx"

[project.scripts]
pipxx = "pipxx:main"

[project.license]
text = "GPLv3"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true

[tool.edit-lint]
linters = [
  "ruff",
  "flake8",
  "mypy",
  "pyright",
]

# vim:se sw=2:
